<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/unique_id_here_is"
        android:textColor="@color/text_color"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/unique_id_warning"
        android:textColor="@color/gray_text_color"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/my_suid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/calculating_unique_id"
        android:textColor="@color/text_color"
        android:textSize="38sp"/>

    <EditText
        android:id="@+id/unique_id_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unique_id_input_hint"
        android:textColor="@color/text_color"
        android:textColorHint="@color/light_gray_text_color"/>

    <TextView
        android:id="@+id/user_not_found_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="invisible"
        tools:visibility="visible"
        android:text="@string/error_user_not_found"/>

    <Button
        android:id="@+id/create_conversation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/ugly_yellow"
        android:text="@string/create_conversation_button"/>
</LinearLayout>